# dbt-hologres

./: .gitignore  CHANGELOG.md  README.md  hatch.toml  pyproject.toml  pytest.ini  test.env.example
examples/: README.md  profiles.yml.example
examples/models/: sql_header_guc_demo.sql
examples/models/marts/: date_utils_demo.sql  dml_use_serverless_computing.sql  logical_partition_table.sql  lpt_multi_keys.sql  table_with_properties.sql
examples/models/staging/: stg_orders.sql
src/dbt/adapters/hologres/: __init__.py  connections.py  impl.py  local_date.py  relation.py
src/dbt/adapters/hologres/relation_configs/: __init__.py  constants.py  index.py
src/dbt/include/hologres/macros/: adapters.sql  date_utils.sql
src/dbt/include/hologres/macros/materializations/: table.sql  (+1 more)
tests/functional/: __init__.py  conftest.py  fixtures.py  test_basic.py  test_constraints.py  test_custom_naming.py  test_date_utils.py  test_error_handling.py  test_logical_partition.py  test_on_schema_change.py  test_sql_header.py  test_table_properties.py
tests/functional/test_materializations/: __init__.py  test_dynamic_table.py  test_incremental.py  test_table.py  test_view.py
tests/integration/: conftest.py  test_hologres_features.py  test_table_operations.py  test_view_operations.py
tests/unit/: conftest.py  test_adapter.py  test_adapter_cache.py  test_adapter_capabilities.py  test_column.py  test_connection.py  test_date_utils_macros.py  test_dynamic_table_config.py  test_edge_cases.py  test_exception_handling.py  test_index_config.py  test_local_date.py  test_local_date_internals.py  test_logical_partition.py  test_relation.py  test_sql_macros.py
