[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dbt-alibaba-cloud-hologres"
description = "The Hologres adapter plugin for dbt"
readme = "README.md"
keywords = ["dbt", "adapter", "adapters", "database", "elt", "dbt-core", "dbt Core", "dbt Cloud", "dbt Labs", "hologres", "阿里云"]
requires-python = ">=3.10.0"
authors = [
    { name = "timothyding", email = "kunwu.dy@alibaba-inc.com" },
    { name = "yaotian-alibaba", email = "zhanggaodi.zgd@alibaba-inc.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "psycopg[binary]>=3.1,<4.0",
    "dbt-adapters>=1.19.0,<2.0",
    # add dbt-core to ensure backwards compatibility of installation, this is not a functional dependency
    "dbt-core>=1.8.0rc1",
    # installed via dbt-adapters but used directly
    "dbt-common>=1.0.4,<2.0",
    "agate>=1.0,<2.0",
]
[project.urls]
Homepage = "https://github.com/aliyun/dbt-hologres.git"
Repository = "https://github.com/aliyun/dbt-hologres.git"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/functional"]
addopts = "-v --color=yes -n auto"
env_files = ["test.env"]
